# tree-sitter-simplicityhl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  shell.nix  tree-sitter.json
bindings/c/: tree-sitter-simfony.pc.in  tree-sitter-simplicityhl.pc.in
bindings/c/tree_sitter/: tree-sitter-simfony.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_simfony/: binding.c
bindings/python/tree_sitter_simplicityhl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSimfonyTests/: TreeSitterSimfonyTests.swift
bindings/swift/TreeSitterSimplicityhl/: simplicityhl.h
bindings/swift/TreeSitterSimplicityhlTests/: TreeSitterSimplicityhlTests.swift
examples/: escrow_with_delay.simf
queries/: folds.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c
