[package]
name = "tree-sitter-simfony"
description = "Tree-sitter parse for Rust-like high-level language that compiles down to Simplicity bytecode."
version = "0.1.1"
authors = ["Kyrylo Baibula <kyrylo.baybula@distributed-lab.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "simfony"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/distributed-lab/tree-sitter-simfony.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
