[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-simplicityhl"
description = "Tree-sitter parse for Rust-like high-level language that compiles down to Simplicity bytecode."
version = "0.1.2"
keywords = ["incremental", "parsing", "tree-sitter", "simplicityhl"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
{ name = "Kyrylo Baibula", email = "kyrylo.baybula@distributed-lab.com" }, 
{ name = "Volodymyr Herashchenko", email = "cholkegn@gmail.com"}
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/distributed-lab/tree-sitter-simplicityhl.git"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
